working on first commit

--- a/index.html
+++ b/index.html
@@ -21,25 +21,30 @@
 
   <!-- Navbar -->
   <nav>
-    <a href="aboutMe">About Reed</a>
-    <a href="projects">Projects</a>
+    <a href="#aboutMe">About Reed</a>
+    <a href="#projects">Projects</a>
     <a href="#">Future Projects</a>
   </nav>
 
   <!-- Body -->
   <main>
-    <div class ="aboutMe">
+    <div class ="aboutMe" id="aboutMe">
       <section class="background">
         <header>Where I've Been...</header>
-        <img src="./assets/images/baby-reed.jpg" 
-        class = "image" 
-        alt = "Reed" 
-        style = "max-width:600px;width:20%"
-        />
-        <p> While Growing up in San Francisco, Reed expanded his horizons 
-          at Alice Fong Yu, a chinese immersion school in the inner sunset. 
-          While there, he began to cultivate his love of learning, passion 
-          for local sports, and his lifelong love -- creative problem solving.</p>
+        <div class = "portrait">
+          <img src="./assets/images/baby-reed.jpg" 
+           class = "image" 
+           alt = "Reed" 
+           style = "max-width:600px;width:20%"
+           />
+          <p> While Growing up in San Francisco, Reed expanded his horizons 
+            at Alice Fong Yu, a chinese immersion school in the inner sunset. 
+            While there, he began to cultivate his love of learning, passion 
+            for local sports, and his lifelong love -- creative problem solving.
+          </p>
+
+        </div>
+        
 
       </section>
       <section class="presently">
