updating with Project 1

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         <p>Demonstrates Usage of Semantic HTML and CSS</p>
       </section>
       <section class="card">
-        <header>More Projects Comming soon...</header>
-        <img src="./assets/images/coding-bunny.jpeg" alt="coding bunny" />
-        <p>Works Real Hard</p>
+        <header> <a href= "https://chadoyek.github.io/Groove-Guide-Project-1/" >Groove Guide</a></header>
+        <img src="./assets/images/groove-guide.png" id= "groove-guide" alt="Groove Guide Interface" />
+        <p>A collaborative project to make API Calls based on user input</p>
+        <p> The project repo can be found <a href= "https://github.com/Chadoyek/Groove-Guide-Project-1/deployments">here:</a></p>
       </section>
       <section class="card">
         <header>More Projects Comming soon...</header>
